path changes for main.css

--- a/_posts/2017-03-17-ein-erstes-r-notebook.html
+++ b/_posts/2017-03-17-ein-erstes-r-notebook.html
@@ -150,7 +150,7 @@ pre.sourceCode {
 	padding: 0;
 }
 </style>
-<link rel="stylesheet" href="/assets/css/main.css">
+<link rel="stylesheet" href="/ondata/assets/css/main.css">
 
 <div class="container-fluid main-container">
 
