try relative paths with base.url

--- a/_posts/2017-03-17-ein-erstes-r-notebook.html
+++ b/_posts/2017-03-17-ein-erstes-r-notebook.html
@@ -150,7 +150,7 @@ pre.sourceCode {
 	padding: 0;
 }
 </style>
-<link rel="stylesheet" href="/ondata/assets/css/main.css">
+<link rel="stylesheet" href={{site.baseurl}}/assets/css/main.css">
 
 <div class="container-fluid main-container">
 
@@ -167,7 +167,7 @@ $(document).ready(function () {
 </style>
 <script>
 $(document).ready(function () {
-  window.initializeSourceEmbed("test-rnb.Rmd");
+  window.initializeSourceEmbed("{{site.baseurl}}/test-rnb.Rmd");
 });
 </script>
 
