--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 ---
-layout: home
-author_profile: true
-author: developer4223
+title: "...is coming soon! Really."
+layout: splash
+date: 2017-04-10 12:11:22 +02:00 
 header:
-    image: /assets/images/header/head_natur1.jpg
-    caption: "&copy; [Kral • Photography](https://kral-photography.com)"
+  overlay_color: "#000"
+  overlay_filter: "0.1"
+  overlay_image: /assets/images/splash.jpg
+  caption: "&copy; [Kral • Photography](https://kral-photography.com)"
+excerpt: "Über das Leben von Daten und Zahlen"
 ---
