--- a/index.html
+++ b/index.html
@@ -6,4 +6,6 @@ date: 2017-04-11 12:11:22 +02:00
 header:
     image: /assets/images/header/head_natur1.jpg
     caption: "&copy; [Kral • Photography](https://kral-photography.com)"
+image:
+    twitter: /assets/images/header/head_natur1_b.jpg
 ---
