--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -3,6 +3,7 @@ layout: archive
 permalink: /year-archive/
 title: "Posts nach Jahren"
 author_profile: true
+sitemap: false
 ---
 
 {% capture written_year %}'None'{% endcapture %}
@@ -14,3 +15,12 @@ author_profile: true
   {% endif %}
   {% include archive-single.html %}
 {% endfor %}
+<br /><br />
+<h1 id="tags" class="page__title">Post-Tags sortiert nach Häufigkeit</h1>
+<hr />
+<ul class="tag__list">
+  {% assign sorted_tags = site.tags | sort_tags_by_name %}
+  {% for tag in sorted_tags %}
+    <li><a href="{{ site.url }}/tag/{{ tag[0] | replace:' ','-' | downcase }}/" class="tag__item"><span class="tag__name">{{ tag[0] }}</span></a> <span class="tag__count">({{ tag[1] }})</span></li>
+  {% endfor %}
+</ul>
