--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 layout: home
 author_profile: true
 author: developer4223
-date: 2017-04-11 12:11:22 +02:00 
+date: 2017-04-11 12:11:22 +02:00
+pagination:
+    enabled: true
 header:
     image: /assets/images/header/head_natur1.jpg
     caption: "&copy; [Kral • Photography](https://kral-photography.com)"
