tag list per count as include

--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -22,9 +22,4 @@ pagination:
 <hr class="cf" />
 <br />
 <h1 id="tags" class="page__title">Post-Tags sortiert nach Häufigkeit</h1>
-<ul class="tag__list">
-  {% assign sorted_tags = site.tags | sort_tags_by_name %}
-  {% for tag in sorted_tags %}
-    <li><a href="{{ site.url }}/tag/{{ tag[0] | replace:' ','-' | downcase }}/" class="tag__item"><span class="tag__name">{{ tag[0] }}</span></a> <span class="tag__count">({{ tag[1] }})</span></li>
-  {% endfor %}
-</ul>
+{% include tag-count.html %}
