changed http to https in 404 page

--- a/404.html
+++ b/404.html
@@ -18,38 +18,38 @@ see https://github.com/jekyll/jekyll-seo-tag/ for usage instructions
 <meta property="og:locale" content="en_US" />
  <meta name="description" content="404 = Page not found." />
  <meta property="og:description" content="404 = Page not found." />
-<link rel="canonical" href="http://ondata.local/404/" />
- <meta property="og:url" content="http://ondata.local/404/" />
+<link rel="canonical" href="https://ondata.local/404/" />
+ <meta property="og:url" content="https://ondata.local/404/" />
  <meta property="og:site_name" content="ONDATA LOCAL" />
- <meta property="og:image" content="http://ondata.local/assets/images/header/head_datanature_13_b.jpg" />
+ <meta property="og:image" content="https://ondata.local/assets/images/header/head_datanature_13_b.jpg" />
    <meta name="twitter:card" content="summary_large_image" />
    <meta name="twitter:title" content="404 bedeutet: Nicht gefunden × ONDATA LOCAL">
  <meta name="twitter:site" content="@" />
    <meta name="twitter:creator" content="@HolgerKral" />
-   <meta name="twitter:image" content="http://ondata.local/assets/images/header/head_datanature_13_b.jpg" />
+   <meta name="twitter:image" content="https://ondata.local/assets/images/header/head_datanature_13_b.jpg" />
    <meta name="twitter:description" content="404 = Page not found." />
 <script type="application/ld+json">
   {
-    "@context": "http://schema.org",
+    "@context": "https://schema.org",
     "@type": "WebPage",
     "headline": "404 bedeutet: Nicht gefunden",
     "author": {
        "@type": "Person",
        "name": {"name":"dev4223","avatar":"/assets/images/avatar_s.jpg","bio":"lerning all about data","location":null,"email":"developer4223@gmail.com","uri":null,"bitbucket":null,"codepen":null,"dribbble":null,"flickr":null,"facebook":null,"foursquare":null,"github":"dev4223","gitlab":null,"google_plus":null,"keybase":null,"instagram":null,"lastfm":null,"linkedin":null,"pinterest":null,"soundcloud":null,"stackoverflow":null,"steam":null,"tumblr":null,"twitter":"HolgerKral","vine":null,"weibo":null,"xing":null,"youtube":null}
     },
-    "image": "http://ondata.local/assets/images/header/head_datanature_13_b.jpg",
+    "image": "https://ondata.local/assets/images/header/head_datanature_13_b.jpg",
     "description": "404 = Page not found.",
-    "url": "http://ondata.local/404/"
+    "url": "https://ondata.local/404/"
   }
 </script>
-<link href="http://ondata.local/feed.xml" type="application/atom+xml" rel="alternate" title="ONDATA LOCAL Feed">
+<link href="https://ondata.local/feed.xml" type="application/atom+xml" rel="alternate" title="ONDATA LOCAL Feed">
 <meta name="HandheldFriendly" content="True">
 <meta name="MobileOptimized" content="320">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script>
   document.documentElement.className = document.documentElement.className.replace(/\bno-js\b/g, '') + ' js ';
 </script>
-<link rel="stylesheet" href="http://ondata.local/assets/css/main.css">
+<link rel="stylesheet" href="https://ondata.local/assets/css/main.css">
 <!--[if lte IE 9]>
  <style>
     /* old IE unsupported flexbox fixes */
@@ -99,20 +99,20 @@ see https://github.com/jekyll/jekyll-seo-tag/ for usage instructions
  <div class="masthead__inner-wrap">
    <div class="masthead__menu">
      <nav id="site-nav" class="greedy-nav">
-        <a class="site-title" href="http://ondata.local/">ONDATA LOCAL</a>
+        <a class="site-title" href="https://ondata.local/">ONDATA LOCAL</a>
        <ul class="visible-links">
            <li class="masthead__menu-item">
-              <a href="http://ondata.local/year-archive/" >Posts</a>
+              <a href="https://ondata.local/year-archive/" >Posts</a>
            </li>
            <li class="masthead__menu-item">
-              <a href="http://ondata.local/uber/" >Über</a>
+              <a href="https://ondata.local/uber/" >Über</a>
            </li>
            <li class="masthead__menu-item">
-              <a href="http://ondata.local/kontakt/" >Kontakt</a>
+              <a href="https://ondata.local/kontakt/" >Kontakt</a>
            </li>
        </ul>
         <button class="search__toggle" type="button">
-          <svg class="icon" width="16" height="16" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 15.99 16">
+          <svg class="icon" width="16" height="16" xmlns="https://www.w3.org/2000/svg" viewBox="0 0 15.99 16">
            <path d="M15.5,13.12L13.19,10.8a1.69,1.69,0,0,0-1.28-.55l-0.06-.06A6.5,6.5,0,0,0,5.77,0,6.5,6.5,0,0,0,2.46,11.59a6.47,6.47,0,0,0,7.74.26l0.05,0.05a1.65,1.65,0,0,0,.5,1.24l2.38,2.38A1.68,1.68,0,0,0,15.5,13.12ZM6.4,2A4.41,4.41,0,1,1,2,6.4,4.43,4.43,0,0,1,6.4,2Z" transform="translate(-.01)"></path>
           </svg>
         </button>
@@ -129,12 +129,12 @@ see https://github.com/jekyll/jekyll-seo-tag/ for usage instructions
 <div class="page__hero"
   style=" "
 >
-    <img src="http://ondata.local/assets/images/header/head_datanature_13.jpg" alt="404 bedeutet: Nicht gefunden" title="" class="page__hero-image">
+    <img src="https://ondata.local/assets/images/header/head_datanature_13.jpg" alt="404 bedeutet: Nicht gefunden" title="" class="page__hero-image">
     <span class="page__hero-caption">© <a href="https://kral-photography.com">Kral • Photography</a>
 </span>
 </div>
 <div id="main" role="main">
- <article class="page" itemscope itemtype="http://schema.org/CreativeWork">
+ <article class="page" itemscope itemtype="https://schema.org/CreativeWork">
    <meta itemprop="headline" content="404 bedeutet: Nicht gefunden">
    <meta itemprop="description" content="404 = Page not found.">
    <div class="page__inner-wrap">
@@ -146,7 +146,7 @@ see https://github.com/jekyll/jekyll-seo-tag/ for usage instructions
        </header>
      <section class="page__content" itemprop="text">
        <h2 id="keine-daten-hier">Keine Daten hier!</h2>
-<p>Sorry, die aufgerufene Seite ist bewegt worden oder verschwunden – vielleicht kannst Du <a href="http://ondata.local/sitemap/" title="sitemap">die Seite hier finden </a> oder Du durchsuchst die Seite mit DuckDuckGo.</p>
+<p>Sorry, die aufgerufene Seite ist bewegt worden oder verschwunden – vielleicht kannst Du <a href="https://ondata.local/sitemap/" title="sitemap">die Seite hier finden </a> oder Du durchsuchst die Seite mit DuckDuckGo.</p>
 <iframe src="https://duckduckgo.com/search.html?site=https://ondata.work&amp;prefill=Search DuckDuckGo&amp;focus=yes" style="overflow:hidden;margin:0;padding:0;width:100%;height:40px;" frameborder="0"></iframe>
      </section>
      <footer class="page__meta">
@@ -169,16 +169,16 @@ see https://github.com/jekyll/jekyll-seo-tag/ for usage instructions
      <li><strong>Folgen:</strong></li>
      <li><a href="https://twitter.com/HolgerKral" target="_blank"><i class="fab fa-fw fa-twitter-square" aria-hidden="true"></i> Twitter</a></li>
      <li><a href="https://github.com/dev4223" target="_blank"><i class="fab fa-fw fa-github" aria-hidden="true"></i> GitHub</a></li>
-   <li><a href="http://ondata.local/feed.xml"><i class="fas fa-fw fa-rss-square" aria-hidden="true"></i> Feed</a></li>
+   <li><a href="https://ondata.local/feed.xml"><i class="fas fa-fw fa-rss-square" aria-hidden="true"></i> Feed</a></li>
  </ul>
 </div>
-<div class="page__footer-copyright">&copy; 2018 dev4223. Powered by <a href="http://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a>. <a class="logo-netlify" href="https://www.netlify.com" target="_blank"><img src="/assets/images/netlify-light.svg"/></a></div>
+<div class="page__footer-copyright">&copy; 2018 dev4223. Powered by <a href="https://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a>. <a class="logo-netlify" href="https://www.netlify.com" target="_blank"><img src="/assets/images/netlify-light.svg"/></a></div>
      </footer>
    </div>
-  <script src="http://ondata.local/assets/js/main.min.js"></script>
+  <script src="https://ondata.local/assets/js/main.min.js"></script>
   <script src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
-  <script src="http://ondata.local/assets/js/lunr/lunr.min.js"></script>
-  <script src="http://ondata.local/assets/js/lunr/lunr-store.js"></script>
-  <script src="http://ondata.local/assets/js/lunr/lunr-en.js"></script>
+  <script src="https://ondata.local/assets/js/lunr/lunr.min.js"></script>
+  <script src="https://ondata.local/assets/js/lunr/lunr-store.js"></script>
+  <script src="https://ondata.local/assets/js/lunr/lunr-en.js"></script>
  </body>
 </html>
